--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
         <title>Concurrent</title>
         <meta property="og:title" content="Concurrent" />
-        <meta property="og:description" content="Concurrentは1つのアカウントで無数のサーバーとつながれる、新しい分散型SNSです。" />
+        <meta property="og:description" content="Concurrent는 하나의 계정으로 수많은 서버와 연결되는 새로운 탈중앙화 SNS입니다." />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://concurrent.world/" /><meta property="og:image" content="https://concurrent.world/concurrent.png"/>
 
